--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,20 +1,58 @@
-body {
+* {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+
+section {
   height: 100vh;
   background: linear-gradient(60deg, #5bf2fd 0% 11%, #fcc736 11% 22%, #fd5f5f 22% 33%, #bb4dfa 33% 44%, #5bf2fd 44% 56%, #fcc736 56% 67%, #fd5f5f 67% 78%, #bb4dfa 78% 89%, #5bf2fd 89% 100%);
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
-
-h1,
-h2,
-h3 {
+section header, section footer {
+  padding: 20px 50px;
+  font-size: 1.5em;
+  font-weight: 900;
+}
+section main {
+  align-self: center;
+  text-align: center;
   color: white;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
 }
-
-footer ul {
+section main h1 {
+  font-size: 10rem;
+}
+section main h3 {
+  font-size: 3rem;
+}
+section main .circle {
+  justify-self: end;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 10rem;
+  height: 10rem;
+  border-radius: 10rem;
+  background: #fcc736;
+  transform: translate(75%, 50%);
+}
+section main h2 {
+  font-size: 6rem;
+}
+section footer {
+  justify-self: end;
+  align-self: end;
+}
+section footer ul {
   display: flex;
   list-style: none;
 }
-footer ul a {
+section footer ul a {
   color: black;
+  margin-right: 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
